Change on Paquetes in Menu Tab

--- a/tab-Menu/index.html
+++ b/tab-Menu/index.html
@@ -1201,6 +1201,12 @@
 										</li>
 
 										<li class="eachProduct">
+											<h5>*Con Cerveza Pacífico aumenta $3 pesos c/cerveza.</h5>
+										</li>
+
+										<li class="eachProduct"></li>
+
+										<li class="eachProduct">
 											<h5>Paquete 1: Cubeta con 10 + 10 alitas</h5>
 											<h6>$220.00</h6>
 										</li>
